--- a/index.html
+++ b/index.html
@@ -6,14 +6,59 @@
   <title>Official Profiles of Arifuzzamanshaon</title>
   <!-- Google Verification -->
   <meta name="google-site-verification" content="1cdef8b7b20ccef0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 0 20px;
+      background-color: #f8f9fa;
+      color: #333;
+      text-align: center;
+    }
+    h1 {
+      color: #1a73e8;
+    }
+    img.profile-photo {
+      width: 150px;
+      height: auto;
+      border-radius: 50%;
+      margin: 20px auto;
+      display: block;
+    }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
+    }
+    footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
+  <img src="profile.jpg" alt="Arifuzzamanshaon Shaon" class="profile-photo">
   <h1>Arifuzzamanshaon Shaon</h1>
-  <p>Official profiles:</p>
+  <p>Official online profiles:</p>
   <ul>
     <li><a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a></li>
     <li><a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">LinkedIn</a></li>
     <li><a href="https://about.me/arifuzzamanshaon" target="_blank">About.me</a></li>
+    <li><a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a></li>
+    <li><a href="mailto:hr.arifuzzamanshaon@gmail.com">Email: hr.arifuzzamanshaon@gmail.com</a></li>
   </ul>
+  <footer>© 2025 Arifuzzamanshaon Shaon</footer>
 </body>
 </html>
