--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <img src="profile.jpg" alt="Arifuzzamanshaon Shaon" class="profile-photo">
+  <img src="profile.png" alt="Arifuzzamanshaon Shaon" class="profile-photo">
   <h1>Arifuzzamanshaon Shaon</h1>
   <p>Official online profiles:</p>
   <ul>
