Update name and background color index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       max-width: 600px;
       margin: 50px auto;
       padding: 0 20px;
-      background-color: #f8f9fa;
+      background-color: #808080;
       color: #333;
       text-align: center;
     }
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <img src="profile.png" alt="Arifuzzamanshaon Shaon" class="profile-photo">
+  <img src="profile.png" alt="Arifuzzaman Shaon" class="profile-photo">
   <h1>Arifuzzamanshaon Shaon</h1>
   <p>Official online profiles:</p>
   <ul>
