--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       margin: 50px auto;
       padding: 0 20px;
       background-color: #808080;
-      color: #000;
+      color: #333;
       text-align: center;
     }
     h1 {
@@ -44,13 +44,13 @@
     footer {
       margin-top: 50px;
       font-size: 0.9em;
-      color: #000;
+      color: #333;
     }
   </style>
 </head>
 <body>
   <img src="profile.png" alt="Arifuzzaman Shaon" class="profile-photo">
-  <h1>Arifuzzamanshaon Shaon</h1>
+  <h1>Arifuzzaman Shaon</h1>
   <p>Official online profiles:</p>
   <ul>
     <li><a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a></li>
