--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
   <ul>
     <li><a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a></li>
     <li><a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">LinkedIn</a></li>
-    <li><a href="https://about.me/arifuzzamanshaon" target="_blank">About.me</a></li>
     <li><a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a></li>
+    <li><a href="https://about.me/arifuzzamanshaon" target="_blank">About.me</a></li>
     <li><a href="mailto:hr.arifuzzamanshaon@gmail.com">Email: hr.arifuzzamanshaon@gmail.com</a></li>
   </ul>
-  <footer>© 2025 Arifuzzamanshaon Shaon</footer>
+  <footer>© 2025 Arifuzzaman Shaon</footer>
 </body>
 </html>
