--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <img src="profile.png" alt="Arifuzzaman Shaon" class="profile-photo">
   <h1>Arifuzzaman Shaon</h1>
-  <p>Official online profiles:</p>
+  <p>My Social Media:</p>
   <ul>
     <li><a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a></li>
     <li><a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">LinkedIn</a></li>
