--- a/index.html
+++ b/index.html
@@ -58,6 +58,48 @@
     <li><a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a></li>
     <li><a href="https://about.me/arifuzzamanshaon" target="_blank">About.me</a></li>
     <li><a href="mailto:hr.arifuzzamanshaon@gmail.com">Email: hr.arifuzzamanshaon@gmail.com</a></li>
+<h2>🎓 Education</h2>
+
+<ul>
+  <li>
+    <b>Postgraduate Diploma (PGD)</b><br>
+    <i>Academy of Business Professionals</i><br>
+    Subject: Human Resource Management <br>
+    Year of Passing: Running <br>
+    Result: -
+  </li><br>
+
+  <li>
+    <b>Masters of Business Administration (MBA)</b><br>
+    <i>Uttara University</i><br>
+    Subject: Human Resource Management <br>
+    Year of Passing: 2024 <br>
+    Result: 3.40 out of 4.00
+  </li><br>
+
+  <li>
+    <b>Bachelor of Business Studies (BBS)</b><br>
+    <i>Bhawal Badre Alam Govt. College</i><br>
+    Subject: Business Studies <br>
+    Year of Passing: 2019 <br>
+    Result: 2.55 out of 4.00
+  </li><br>
+
+  <li>
+    <b>Higher Secondary Certificate (HSC)</b><br>
+    <i>Dr. Abdur Razzak Municipal College</i><br>
+    Subject: Business Studies <br>
+    Year of Passing: 2016 <br>
+    Result: 3.50 out of 5.00
+  </li><br>
+
+  <li>
+    <b>Secondary School Certificate (SSC)</b><br>
+    <i>Chaughachha Hazi Sarder Martuz Ali Secondary School</i><br>
+    Subject: Business Studies <br>
+    Year of Passing: 2014 <br>
+    Result: 4.13 out of 5.00
+  </li>
   </ul>
   <footer>© 2025 Arifuzzaman Shaon</footer>
 </body>
