--- a/index.html
+++ b/index.html
@@ -2,105 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Official Profiles of Arifuzzamanshaon</title>
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="1cdef8b7b20ccef0">
+  <title>Arifuzzaman Shaon - Official Site</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 0 20px;
-      background-color: #808080;
-      color: #333;
-      text-align: center;
-    }
-    h1 {
-      color: #1a73e8;
-    }
-    img.profile-photo {
-      width: 150px;
-      height: auto;
-      border-radius: 50%;
-      margin: 20px auto;
-      display: block;
-    }
-    a {
-      color: #1a73e8;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    li {
-      margin: 10px 0;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 0.9em;
-      color: #333;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f4f4f9; }
+    .navbar { background: #222; padding: 10px; border-radius: 8px; }
+    .navbar a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    .navbar a:hover { text-decoration: underline; }
+    h1 { color: #333; }
+    img { border-radius: 12px; }
   </style>
 </head>
 <body>
-  <img src="profile.png" alt="Arifuzzaman Shaon" class="profile-photo">
-  <h1>Arifuzzaman Shaon</h1>
-  <p>My Social Media:</p>
+
+  <div class="navbar">
+    <a href="index.html">🏠 Home</a>
+    <a href="education.html">🎓 Education</a>
+    <a href="contact.html">📧 Contact</a>
+  </div>
+
+  <h1>Welcome to My Official Page</h1>
+  <img src="profile.png" alt="My Photo" width="200"><br><br>
+
+  <h2>🌐 My Profiles</h2>
   <ul>
     <li><a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a></li>
     <li><a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">LinkedIn</a></li>
-    <li><a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a></li>
     <li><a href="https://about.me/arifuzzamanshaon" target="_blank">About.me</a></li>
-    <li><a href="mailto:hr.arifuzzamanshaon@gmail.com">Email: hr.arifuzzamanshaon@gmail.com</a></li>
-<h2>🎓 Education</h2>
-
-<ul>
-  <li>
-    <b>Postgraduate Diploma (PGD)</b><br>
-    <i>Academy of Business Professionals</i><br>
-    Subject: Human Resource Management <br>
-    Year of Passing: Running <br>
-    Result: -
-  </li><br>
-
-  <li>
-    <b>Masters of Business Administration (MBA)</b><br>
-    <i>Uttara University</i><br>
-    Subject: Human Resource Management <br>
-    Year of Passing: 2024 <br>
-    Result: 3.40 out of 4.00
-  </li><br>
-
-  <li>
-    <b>Bachelor of Business Studies (BBS)</b><br>
-    <i>Bhawal Badre Alam Govt. College</i><br>
-    Subject: Business Studies <br>
-    Year of Passing: 2019 <br>
-    Result: 2.55 out of 4.00
-  </li><br>
-
-  <li>
-    <b>Higher Secondary Certificate (HSC)</b><br>
-    <i>Dr. Abdur Razzak Municipal College</i><br>
-    Subject: Business Studies <br>
-    Year of Passing: 2016 <br>
-    Result: 3.50 out of 5.00
-  </li><br>
-
-  <li>
-    <b>Secondary School Certificate (SSC)</b><br>
-    <i>Chaughachha Hazi Sarder Martuz Ali Secondary School</i><br>
-    Subject: Business Studies <br>
-    Year of Passing: 2014 <br>
-    Result: 4.13 out of 5.00
-  </li>
+    <li><a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a></li>
+    <li><a href="mailto:hr.arifuzzamanshaon@gmail.com">Email Me</a></li>
   </ul>
-  <footer>© 2025 Arifuzzaman Shaon</footer>
+
 </body>
 </html>
+
