--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,6 @@
   <p>Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com">hr.arifuzzamanshaon@gmail.com</a></p>
   <p>Instagram: <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">@arifuzzamanshaon</a></p>
   <p>Facebook: <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Md. Arifuzzaman Shaon</a></p>
+  <p>Linkedin: <a href="https://www.linkedin.com/in/arifuzzamanshaon/" target="_blank">Md. Arifuzzaman Shaon</a></p>
 </body>
 </html>
