--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,24 @@
     <a href="education.html">🎓 Education</a>
     <a href="contact.html">📧 Contact</a>
   </div>
+<h2>🌐 Connect with Me</h2>
 
-  <h1>📧 Contact Me</h1>
-  <p>Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com">hr.arifuzzamanshaon@gmail.com</a></p>
-  <p>Instagram: <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">@arifuzzamanshaon</a></p>
-  <p>Facebook: <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Md. Arifuzzaman Shaon</a></p>
-  <p>Linkedin: <a href="https://www.linkedin.com/in/arifuzzamanshaon/" target="_blank">Md. Arifuzzaman Shaon</a></p>
+<div style="display: flex; gap: 20px; flex-wrap: wrap;">
+  <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="40" alt="Facebook">
+  </a>
+
+  <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="40" alt="LinkedIn">
+  </a>
+
+  <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="40" alt="Instagram">
+  </a>
+
+  <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="40" alt="Email">
+  </a>
+</div>
 </body>
 </html>
