--- a/index.html
+++ b/index.html
@@ -23,13 +23,26 @@
   <h1>Welcome to My Official Page</h1>
   <img src="profile.png" alt="My Photo" width="200"><br><br>
 
-  <h2>🌐 My Profiles</h2>
-  <ul>
-    <li><a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a></li>
-    <li><a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">LinkedIn</a></li>
-    <li><a href="https://about.me/arifuzzamanshaon" target="_blank">About.me</a></li>
-    <li><a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a></li>
-    <li><a href="mailto:hr.arifuzzamanshaon@gmail.com">Email Me</a></li>
+  <h2>🌐 Connect with Me</h2>
+
+<div style="display: flex; gap: 20px; flex-wrap: wrap;">
+  <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="40" alt="Facebook">
+  </a>
+
+  <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="40" alt="LinkedIn">
+  </a>
+
+  <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="40" alt="Instagram">
+  </a>
+
+  <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="text-decoration:none;">
+    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="40" alt="Email">
+  </a>
+</div>
+
   </ul>
 
 </body>
