--- a/index.html
+++ b/index.html
@@ -2,49 +2,131 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Arifuzzaman Shaon - Official Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Md. Arifuzzaman Shaon | Portfolio</title>
+  <link rel="icon" href="profile.png">
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f4f4f9; }
-    .navbar { background: #222; padding: 10px; border-radius: 8px; }
-    .navbar a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .navbar a:hover { text-decoration: underline; }
-    h1 { color: #333; }
-    img { border-radius: 12px; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f9;
+      color: #333;
+      text-align: center;
+    }
+    header {
+      background: #1a73e8;
+      color: white;
+      padding: 30px 10px;
+      border-bottom-left-radius: 40px;
+      border-bottom-right-radius: 40px;
+    }
+    img.profile {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin-top: 15px;
+      border: 4px solid white;
+    }
+    h1 { margin: 10px 0 5px; font-size: 28px; }
+    h3 { margin: 5px 0 15px; font-weight: 400; }
+
+    .social-icons a {
+      margin: 0 10px;
+      color: white;
+      text-decoration: none;
+      font-size: 22px;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      text-align: left;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 30px;
+    }
+
+    section h2 {
+      color: #1a73e8;
+      margin-bottom: 15px;
+    }
+
+    p {
+      line-height: 1.7;
+      font-size: 17px;
+    }
+
+    .buttons {
+      margin-top: 30px;
+    }
+    .buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 10px 25px;
+      background: #1a73e8;
+      color: white;
+      text-decoration: none;
+      border-radius: 30px;
+      transition: 0.3s;
+    }
+    .buttons a:hover {
+      background: #0d47a1;
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: #1a73e8;
+      color: white;
+      border-top-left-radius: 40px;
+      border-top-right-radius: 40px;
+    }
   </style>
 </head>
 <body>
 
-  <div class="navbar">
-    <a href="index.html">🏠 Home</a>
-    <a href="education.html">🎓 Education</a>
-    <a href="contact.html">📧 Contact</a>
-  </div>
+  <header>
+    <img src="profile.png" alt="Profile Photo" class="profile">
+    <h1>Md. Arifuzzaman Shaon</h1>
+    <h3>Human Resource Management | MBA | HR Professional</h3>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">📘</a>
+      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">💼</a>
+      <a href="https://about.me/arifuzzamanshaon" target="_blank">🌐</a>
+      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">📸</a>
+      <a href="mailto:hr.arifuzzamanshaon@gmail.com">✉️</a>
+    </div>
+  </header>
 
-  <h1>Welcome to My Official Page</h1>
-  <img src="profile.png" alt="My Photo" width="200"><br><br>
+  <section>
+    <h2>👨‍💼 About Me</h2>
+    <p>
+      Hello! I’m <strong>Md. Arifuzzaman Shaon</strong> — a passionate and self-motivated individual 
+      with a strong background in <strong>Human Resource Management</strong>.
+      I believe in continuous learning, hard work, and smart execution.
+      Currently, I’m pursuing my <strong>Postgraduate Diploma (PGD)</strong> at the 
+      <strong>Academy of Business Professionals</strong> while having completed my 
+      <strong>MBA in Human Resource Management</strong> from <strong>Uttara University</strong>.
+    </p>
+    <p>
+      My goal is to build a successful career in HR where I can help organizations grow 
+      through effective people management, teamwork, and strategic development.  
+      Apart from my academic and professional life, I enjoy exploring new technologies 
+      and creative projects that enhance personal growth.
+    </p>
 
-  <h2>🌐 Connect with Me</h2>
+    <div class="buttons">
+      <a href="education.html">🎓 Education</a>
+      <a href="contact.html">📞 Contact</a>
+    </div>
+  </section>
 
-<div style="display: flex; gap: 20px; flex-wrap: wrap;">
-  <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="40" alt="Facebook">
-  </a>
-
-  <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="40" alt="LinkedIn">
-  </a>
-
-  <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="40" alt="Instagram">
-  </a>
-
-  <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="40" alt="Email">
-  </a>
-</div>
-
-  </ul>
+  <footer>
+    <p>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</p>
+  </footer>
 
 </body>
 </html>
-
