--- a/index.html
+++ b/index.html
@@ -3,129 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Md. Arifuzzaman Shaon | Portfolio</title>
-  <link rel="icon" href="profile.png">
+  <title>Md. Arifuzzaman Shaon - Portfolio</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
       margin: 0;
       padding: 0;
-      background: #f4f4f9;
-      color: #333;
-      text-align: center;
     }
+
     header {
-      background: #1a73e8;
-      color: white;
-      padding: 30px 10px;
-      border-bottom-left-radius: 40px;
-      border-bottom-right-radius: 40px;
+      padding: 30px;
     }
+
     img.profile {
       width: 150px;
       height: 150px;
       border-radius: 50%;
-      margin-top: 15px;
-      border: 4px solid white;
+      border: 3px solid white;
+      margin-top: 20px;
     }
-    h1 { margin: 10px 0 5px; font-size: 28px; }
-    h3 { margin: 5px 0 15px; font-weight: 400; }
+
+    h1 {
+      font-size: 28px;
+      margin: 10px 0;
+    }
+
+    p.title {
+      font-size: 18px;
+      color: #a9d6e5;
+    }
+
+    .about {
+      max-width: 600px;
+      margin: 30px auto;
+      font-size: 16px;
+      line-height: 1.6;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    .social-icons {
+      margin-top: 25px;
+    }
 
     .social-icons a {
       margin: 0 10px;
-      color: white;
-      text-decoration: none;
-      font-size: 22px;
-    }
-
-    section {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      text-align: left;
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 30px;
-    }
-
-    section h2 {
-      color: #1a73e8;
-      margin-bottom: 15px;
-    }
-
-    p {
-      line-height: 1.7;
-      font-size: 17px;
-    }
-
-    .buttons {
-      margin-top: 30px;
-    }
-    .buttons a {
       display: inline-block;
-      margin: 10px;
-      padding: 10px 25px;
-      background: #1a73e8;
-      color: white;
-      text-decoration: none;
-      border-radius: 30px;
-      transition: 0.3s;
     }
-    .buttons a:hover {
-      background: #0d47a1;
+
+    .social-icons img {
+      width: 30px;
+      height: 30px;
+      filter: invert(1);
+      transition: transform 0.2s;
+    }
+
+    .social-icons img:hover {
+      transform: scale(1.2);
+    }
+
+    .btn {
+      background-color: #00b4d8;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #0077b6;
     }
 
     footer {
       margin-top: 40px;
       padding: 20px;
-      background: #1a73e8;
-      color: white;
-      border-top-left-radius: 40px;
-      border-top-right-radius: 40px;
+      font-size: 14px;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="profile.png" alt="Profile Photo" class="profile">
+    <img src="profile.png" alt="Md. Arifuzzaman Shaon" class="profile">
     <h1>Md. Arifuzzaman Shaon</h1>
-    <h3>Human Resource Management | MBA | HR Professional</h3>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">📘</a>
-      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">💼</a>
-      <a href="https://about.me/arifuzzamanshaon" target="_blank">🌐</a>
-      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">📸</a>
-      <a href="mailto:hr.arifuzzamanshaon@gmail.com">✉️</a>
-    </div>
+    <p class="title">Welfare Officer | AMANN Bangladesh Ltd.</p>
   </header>
 
-  <section>
-    <h2>👨‍💼 About Me</h2>
+  <section class="about">
+    <h2>About Me</h2>
     <p>
-      Hello! I’m <strong>Md. Arifuzzaman Shaon</strong> — a passionate and self-motivated individual 
-      with a strong background in <strong>Human Resource Management</strong>.
-      I believe in continuous learning, hard work, and smart execution.
-      Currently, I’m pursuing my <strong>Postgraduate Diploma (PGD)</strong> at the 
-      <strong>Academy of Business Professionals</strong> while having completed my 
-      <strong>MBA in Human Resource Management</strong> from <strong>Uttara University</strong>.
+      I am a passionate professional with a strong background in Human Resource Management.
+      Currently working at AMANN Bangladesh Ltd., I believe in continuous learning,
+      teamwork, and leadership through empathy. I always try to blend people skills
+      with organizational development to create a positive work culture.
     </p>
-    <p>
-      My goal is to build a successful career in HR where I can help organizations grow 
-      through effective people management, teamwork, and strategic development.  
-      Apart from my academic and professional life, I enjoy exploring new technologies 
-      and creative projects that enhance personal growth.
-    </p>
-
-    <div class="buttons">
-      <a href="education.html">🎓 Education</a>
-      <a href="contact.html">📞 Contact</a>
-    </div>
   </section>
 
+  <div class="social-icons">
+    <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook">
+    </a>
+    <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn">
+    </a>
+    <a href="https://about.me/arifuzzamanshaon" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/aboutdotme.svg" alt="About.me">
+    </a>
+    <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
+    </a>
+    <a href="mailto:hr.arifuzzamanshaon@gmail.com">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Email">
+    </a>
+  </div>
+
+  <br>
+  <a href="education.html" class="btn">🎓 View Education Details</a>
+
   <footer>
-    <p>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</p>
+    © 2025 Md. Arifuzzaman Shaon | All Rights Reserved
   </footer>
 
 </body>
