--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Md. Arifuzzaman Shaon - Portfolio</title>
+  <title>Arifuzzaman Shaon - Portfolio</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -92,8 +92,8 @@
 <body>
 
   <header>
-    <img src="profile.png" alt="Md. Arifuzzaman Shaon" class="profile">
-    <h1>Md. Arifuzzaman Shaon</h1>
+    <img src="profile.png" alt="Arifuzzaman Shaon" class="profile">
+    <h1>Arifuzzaman Shaon</h1>
     <p class="title">Welfare Officer | AMANN Bangladesh Ltd.</p>
   </header>
 
@@ -129,7 +129,7 @@
   <a href="education.html" class="btn">🎓 View Education Details</a>
 
   <footer>
-    © 2025 Md. Arifuzzaman Shaon | All Rights Reserved
+    © 2025 Arifuzzaman Shaon | All Rights Reserved
   </footer>
 
 </body>
