--- a/contact.html
+++ b/contact.html
@@ -2,40 +2,115 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact - Arifuzzaman Shaon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - Md. Arifuzzaman Shaon</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f4f4f9; }
-    .navbar { background: #222; padding: 10px; border-radius: 8px; }
-    .navbar a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .navbar a:hover { text-decoration: underline; }
-    h1 { color: #333; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      padding: 30px;
+    }
+
+    h1 { margin: 0; font-size: 28px; }
+
+    .btn {
+      background-color: #00b4d8;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #0077b6;
+    }
+
+    section {
+      max-width: 600px;
+      margin: 30px auto;
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      text-align: left;
+    }
+
+    h2 { color: #00b4d8; margin-bottom: 15px; }
+
+    p { line-height: 1.6; font-size: 16px; }
+
+    .social-icons {
+      margin-top: 20px;
+    }
+
+    .social-icons a {
+      margin: 0 10px;
+      display: inline-block;
+    }
+
+    .social-icons img {
+      width: 28px;
+      height: 28px;
+      filter: invert(1);
+      transition: transform 0.2s;
+    }
+
+    .social-icons img:hover {
+      transform: scale(1.2);
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 14px;
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
 
-  <div class="navbar">
-    <a href="index.html">🏠 Home</a>
-    <a href="education.html">🎓 Education</a>
-    <a href="contact.html">📧 Contact</a>
-  </div>
-<h2>🌐 Connect with Me</h2>
+  <header>
+    <h1>📧 Contact Me</h1>
+    <a href="index.html" class="btn">🏠 Back to Home</a>
+  </header>
 
-<div style="display: flex; gap: 20px; flex-wrap: wrap;">
-  <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="40" alt="Facebook">
-  </a>
+  <section>
+    <h2>Get in Touch</h2>
+    <p>Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="color:#00b4d8;">hr.arifuzzamanshaon@gmail.com</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank" style="color:#00b4d8;">@arifuzzamanshaon</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank" style="color:#00b4d8;">Md. Arifuzzaman Shaon</a></p>
 
-  <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="40" alt="LinkedIn">
-  </a>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook">
+      </a>
+      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://about.me/arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/aboutdotme.svg" alt="About.me">
+      </a>
+      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
+      </a>
+      <a href="mailto:hr.arifuzzamanshaon@gmail.com">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Email">
+      </a>
+    </div>
+  </section>
 
-  <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="40" alt="Instagram">
-  </a>
+  <footer>
+    © 2025 Md. Arifuzzaman Shaon | All Rights Reserved
+  </footer>
 
-  <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="text-decoration:none;">
-    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="40" alt="Email">
-  </a>
-</div>
 </body>
 </html>
