--- a/education.html
+++ b/education.html
@@ -79,7 +79,7 @@
     
     <a href="index.html" class="btn">🏠 Back to Home</a>
   </header>
-
+<section>
   <section>
     <h2>Education Details</h2>
     <table>
