--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Education - Md. Arifuzzaman Shaon</title>
+  <title>Education - Arifuzzaman Shaon</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -69,9 +69,24 @@
 <body>
 
   <header>
-    <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
-    <a href="index.html" class="btn">🏠 Back to Home</a>
-  </header>
+  <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
+  <a href="index.html" class="btn">🏠 Back to Home</a>
+</header>
+header {
+  padding: 30px;
+  text-align: center;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 28px;
+}
+
+header a.btn {
+  display: inline-block;
+  margin-top: 15px;
+}
+
 
   <section>
     <h2>Education Details</h2>
