--- a/education.html
+++ b/education.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Education - Arifuzzaman Shaon</title>
+  <title>Education - Md. Arifuzzaman Shaon</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
       text-align: center;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
-      margin: 0;
-      padding: 0;
     }
 
     header {
       padding: 30px 20px 50px 20px;
     }
 
-    h1 { margin: 0; font-size: 28px; }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
 
-    .btn {
+    header a.btn {
+      display: inline-block;
+      margin-top: 20px;
       background-color: #00b4d8;
       color: white;
       padding: 10px 20px;
@@ -29,14 +34,14 @@
       text-decoration: none;
       font-weight: bold;
       transition: background 0.3s;
-      display: inline-block;
-      margin-top: 20px; /* spacing fix */
     }
 
-    .btn:hover { background-color: #0077b6; }
+    header a.btn:hover {
+      background-color: #0077b6;
+    }
 
     section {
-      max-width: 800px;
+      max-width: 900px;
       margin: 30px auto;
       background: rgba(255,255,255,0.1);
       border-radius: 15px;
@@ -44,7 +49,10 @@
       text-align: left;
     }
 
-    h2 { color: #00b4d8; margin-bottom: 15px; }
+    h2 {
+      color: #00b4d8;
+      margin-bottom: 15px;
+    }
 
     table {
       width: 100%;
@@ -52,55 +60,43 @@
       margin-top: 10px;
     }
 
-    table, th, td { border: 1px solid white; }
+    table, th, td {
+      border: 1px solid white;
+    }
 
-    th, td { padding: 10px; text-align: left; }
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
 
-    th { background-color: rgba(255,255,255,0.2); }
+    th {
+      background-color: rgba(255,255,255,0.2);
+    }
 
-    footer { margin-top: 40px; padding: 20px; font-size: 14px; color: #ccc; }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 14px;
+      color: #ccc;
+    }
 
     @media (max-width: 600px) {
-      h1 { font-size: 24px; }
-      .btn { padding: 8px 16px; font-size: 14px; }
+      header h1 {
+        font-size: 24px;
+      }
+      header a.btn {
+        padding: 8px 16px;
+        font-size: 14px;
+      }
+      table th, table td {
+        font-size: 14px;
+        padding: 8px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-  <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
-  <a href="index.html" class="btn">🏠 Back to Home</a>
-</header>
-header {
-  padding: 30px;
-  text-align: center;
-}
-
-header h1 {
-  margin: 0;
-  font-size: 28px;
-}
-
-header a.btn {
-  display: inline-block;
-  margin-top: 15px;
-}
-
-
-  <section>
-    <h2>Education Details</h2>
-    <table>
-      <tr><th>Degree</th><th>Institute</th><th>Subject</th><th>Year</th><th>Result</th></tr>
-      <tr><td>Postgraduate Diploma (PGD)</td><td>Academy of Business Professionals</td><td>Human Resource Management</td><td>Running</td><td>-</td></tr>
-      <tr><td>Masters of Business Administration (MBA)</td><td>Uttara University</td><td>Human Resource Management</td><td>2024</td><td>3.40 / 4.00</td></tr>
-      <tr><td>Bachelor of Business Studies (BBS)</td><td>Bhawal Badre Alam Govt. College</td><td>Business Studies</td><td>2019</td><td>2.55 / 4.00</td></tr>
-      <tr><td>Higher Secondary Certificate (HSC)</td><td>Dr. Adbur Razzak Municipal College</td><td>Business Studies</td><td>2016</td><td>3.50 / 5.00</td></tr>
-      <tr><td>Secondary School Certificate (SSC)</td><td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td><td>Business Studies</td><td>2014</td><td>4.13 / 5.00</td></tr>
-    </table>
-  </section>
-
-  <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
-
-</body>
-</html>
+    <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
+    <a href="i
