--- a/education.html
+++ b/education.html
@@ -99,4 +99,58 @@
 
   <header>
     <h1>🎓 Education - Md. Arifuzzaman Shaon</h1>
-    <a href="i
+    <a href="index.html" class="btn">🏠 Back to Home</a>
+  </header>
+
+  <section>
+    <h2>Education Details</h2>
+    <table>
+      <tr>
+        <th>Degree</th>
+        <th>Institute</th>
+        <th>Subject</th>
+        <th>Year</th>
+        <th>Result</th>
+      </tr>
+      <tr>
+        <td>Postgraduate Diploma (PGD)</td>
+        <td>Academy of Business Professionals</td>
+        <td>Human Resource Management</td>
+        <td>Running</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>Masters of Business Administration (MBA)</td>
+        <td>Uttara University</td>
+        <td>Human Resource Management</td>
+        <td>2024</td>
+        <td>3.40 / 4.00</td>
+      </tr>
+      <tr>
+        <td>Bachelor of Business Studies (BBS)</td>
+        <td>Bhawal Badre Alam Govt. College</td>
+        <td>Business Studies</td>
+        <td>2019</td>
+        <td>2.55 / 4.00</td>
+      </tr>
+      <tr>
+        <td>Higher Secondary Certificate (HSC)</td>
+        <td>Dr. Adbur Razzak Municipal College</td>
+        <td>Business Studies</td>
+        <td>2016</td>
+        <td>3.50 / 5.00</td>
+      </tr>
+      <tr>
+        <td>Secondary School Certificate (SSC)</td>
+        <td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td>
+        <td>Business Studies</td>
+        <td>2014</td>
+        <td>4.13 / 5.00</td>
+      </tr>
+    </table>
+  </section>
+
+  <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
+
+</body>
+</html>
