--- a/index.html
+++ b/index.html
@@ -108,7 +108,26 @@
   </section>
   <br>
   <a href="education.html" class="btn">🎓 View Education Details</a>
+<section id="work-experience" style="max-width: 900px; margin: 50px auto; background: rgba(255,255,255,0.1); border-radius: 15px; padding: 20px; text-align: left;">
+  <h2 style="text-align:center; color:#00b4d8;">💼 Work Experience</h2>
+  
+  <!-- Short Summary -->
+  <p style="font-size:16px; color:white; text-align:center;">
+    Shaon has professional experience in two key roles:
+  </p>
+  
+  <ul style="color:white; font-size:15px; max-width:600px; margin:0 auto; line-height:1.6;">
+    <li>Contractual Employee Supervisor at ABID Enterprise (Dec 2016 – June 2025)</li>
+    <li>Welfare Officer at AMANN Bangladesh Ltd. (July 2025 – Present)</li>
+  </ul>
 
+  <!-- Button to full experience page -->
+  <div style="text-align:center; margin-top:20px;">
+    <a href="experience.html" style="background-color:#00b4d8; color:white; padding:10px 20px; border-radius:25px; text-decoration:none; font-weight:bold;">View More</a>
+  </div>
+</section>
+
+  
   <div class="social-icons">
     <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook">
