--- a/index.html
+++ b/index.html
@@ -126,4 +126,50 @@
   <!-- Header -->
   <header>
     <img src="profile.png" alt="Profile Photo">
-    <h1>Md. Arifuzzaman Shaon</
+    <h1>Md. Arifuzzaman Shaon</h1>
+    <p>Welfare Officer at AMANN Bangladesh Ltd.</p>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">Instagram</a>
+      <a href="mailto:hr.arifuzzamanshaon@gmail.com">Email</a>
+    </div>
+  </header>
+
+  <!-- About Me Section -->
+  <section id="about-me">
+    <h2>👤 About Me</h2>
+    <p>
+      I am Md. Arifuzzaman Shaon, currently working as Welfare Officer at AMANN Bangladesh Ltd.
+      Experienced in Human Resource Management and passionate about organizational development.
+    </p>
+  </section>
+
+  <!-- Education Section -->
+  <section id="education">
+    <h2>🎓 Education</h2>
+    <table>
+      <tr><th>Degree</th><th>Institute</th><th>Subject</th><th>Year</th><th>Result</th></tr>
+      <tr><td>Postgraduate Diploma (PGD)</td><td>Academy of Business Professionals</td><td>Human Resource Management</td><td>Running</td><td>-</td></tr>
+      <tr><td>MBA</td><td>Uttara University</td><td>Human Resource Management</td><td>2024</td><td>3.40 / 4.00</td></tr>
+      <tr><td>BBS</td><td>Bhawal Badre Alam Govt. College</td><td>Business Studies</td><td>2019</td><td>2.55 / 4.00</td></tr>
+      <tr><td>HSC</td><td>Dr. Adbur Razzak Municipal College</td><td>Business Studies</td><td>2016</td><td>3.50 / 5.00</td></tr>
+      <tr><td>SSC</td><td>Chaughachha Hazi Sarder Martuz Ali Secondary School</td><td>Business Studies</td><td>2014</td><td>4.13 / 5.00</td></tr>
+    </table>
+
+    <!-- Buttons side by side -->
+    <div class="btn-group">
+      <a href="education.html" class="btn">View Education</a>
+      <a href="experience.html" class="btn">View Experience</a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>📞 Contact</h2>
+    <p style="text-align:center;">Email: <a href="mailto:hr.arifuzzamanshaon@gmail.com" style="color:#00b4d8;">hr.arifuzzamanshaon@gmail.com</a></p>
+  </section>
+
+  <footer>© 2025 Md. Arifuzzaman Shaon | All Rights Reserved</footer>
+
+</body>
+</html>
