--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     .social-icons a {
       margin: 0 10px;
       display: inline-block;
-      width: 45px;
-      height: 45px;
-      line-height: 45px;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
       text-align: center;
       color: white;
-      font-size: 22px;
+      font-size: 24px;
       border-radius: 50%;
       background-color: #00b4d8;
       transition: 0.3s;
@@ -110,7 +110,7 @@
     @media(max-width:600px){
       header h1 { font-size:24px; }
       .btn { padding:8px 16px; font-size:14px; margin:5px; }
-      .social-icons a { width:35px; height:35px; line-height:35px; font-size:18px; }
+      .social-icons a { width:40px; height:40px; line-height:40px; font-size:18px; }
     }
   </style>
 </head>
@@ -124,10 +124,18 @@
 
     <!-- Social Media Icons -->
     <div class="social-icons">
-      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      <a href="mailto:hr.arifuzzamanshaon@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="mailto:hr.arifuzzamanshaon@gmail.com">
+        <i class="fas fa-envelope"></i>
+      </a>
     </div>
   </header>
 
