--- a/index.html
+++ b/index.html
@@ -43,24 +43,12 @@
     .social-icons a {
       margin: 0 10px;
       display: inline-block;
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      text-align: center;
-      border-radius: 50%;
-      background-color: #00b4d8;
-      transition: 0.3s;
       text-decoration: none;
     }
 
-    .social-icons a:hover {
-      background-color: #0077b6;
-    }
-
     .social-icons svg {
-      width: 24px;
-      height: 24px;
-      fill: white;
+      width: 36px;
+      height: 36px;
       vertical-align: middle;
     }
 
@@ -111,8 +99,7 @@
     @media(max-width:600px){
       header h1 { font-size:24px; }
       .btn { padding:8px 16px; font-size:14px; margin:5px; }
-      .social-icons a { width:40px; height:40px; line-height:40px; }
-      .social-icons svg { width:18px; height:18px; }
+      .social-icons svg { width:28px; height:28px; }
     }
   </style>
 </head>
@@ -124,32 +111,32 @@
     <h1>Md. Arifuzzaman Shaon</h1>
     <p>Welfare Officer at AMANN Bangladesh Ltd.</p>
 
-    <!-- Social Media Icons (SVG) -->
+    <!-- Social Media Icons (Original Color) -->
     <div class="social-icons">
       <!-- Facebook -->
       <a href="https://www.facebook.com/Md.Arifuzzamanshaon" target="_blank">
         <svg viewBox="0 0 24 24">
-          <path d="M22.675 0h-21.35C.595 0 0 .593 0 1.326v21.348C0 23.406.595 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.794.716-1.794 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.324-.594 1.324-1.326V1.326C24 .593 23.405 0 22.675 0z"/>
+          <path fill="#1877F2" d="M22.675 0h-21.35C.595 0 0 .593 0 1.326v21.348C0 23.406.595 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.794.716-1.794 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.324-.594 1.324-1.326V1.326C24 .593 23.405 0 22.675 0z"/>
         </svg>
       </a>
       <!-- Instagram -->
       <a href="https://www.instagram.com/arifuzzamanshaon" target="_blank">
         <svg viewBox="0 0 24 24">
-          <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.17.056 1.97.24 2.427.415a4.92 4.92 0 011.794 1.04 4.918 4.918 0 011.04 1.794c.175.457.359 1.257.415 2.427.058 1.266.07 1.645.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.415 2.427a4.918 4.918 0 01-1.04 1.794 4.918 4.918 0 01-1.794 1.04c-.457.175-1.257.359-2.427.415-1.266.058-1.645.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.427-.415a4.918 4.918 0 01-1.794-1.04 4.918 4.918 0 01-1.04-1.794c-.175-.457-.359-1.257-.415-2.427C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.056-1.17.24-1.97.415-2.427a4.918 4.918 0 011.04-1.794 4.918 4.918 0 011.794-1.04c.457-.175 1.257-.359 2.427-.415C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.775.13 4.768.309 3.95.583a7.042 7.042 0 00-2.574 1.49A7.043 7.043 0 00.583 4.647c-.274.818-.453 1.825-.511 3.102C.013 8.332 0 8.741 0 12c0 3.259.013 3.668.072 4.948.058 1.277.237 2.284.511 3.102a7.043 7.043 0 001.493 2.574 7.042 7.042 0 002.574 1.493c.818.274 1.825.453 3.102.511C8.332 23.987 8.741 24 12 24s3.668-.013 4.948-.072c1.277-.058 2.284-.237 3.102-.511a7.042 7.042 0 002.574-1.493 7.042 7.042 0 001.493-2.574c.274-.818.453-1.825.511-3.102C23.987 15.668 24 15.259 24 12s-.013-3.668-.072-4.948c-.058-1.277-.237-2.284-.511-3.102a7.043 7.043 0 00-1.493-2.574 7.043 7.043 0 00-2.574-1.493c-.818-.274-1.825-.453-3.102-.511C15.668.013 15.259 0 12 0z"/>
-          <circle cx="12" cy="12" r="3.5"/>
-          <circle cx="18.406" cy="5.594" r="1.44"/>
+          <path fill="#E4405F" d="M12 2.163c3.204 0 3.584.012 4.85.07 1.17.056 1.97.24 2.427.415a4.92 4.92 0 011.794 1.04 4.918 4.918 0 011.04 1.794c.175.457.359 1.257.415 2.427.058 1.266.07 1.645.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.415 2.427a4.918 4.918 0 01-1.04 1.794 4.918 4.918 0 01-1.794 1.04c-.457.175-1.257.359-2.427.415-1.266.058-1.645.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.427-.415a4.918 4.918 0 01-1.794-1.04 4.918 4.918 0 01-1.04-1.794c-.175-.457-.359-1.257-.415-2.427C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.056-1.17.24-1.97.415-2.427a4.918 4.918 0 011.04-1.794 4.918 4.918 0 011.794-1.04c.457-.175 1.257-.359 2.427-.415C8.416 2.175 8.796 2.163 12 2.163z"/>
+          <circle fill="#fff" cx="12" cy="12" r="3.5"/>
+          <circle fill="#fff" cx="18.406" cy="5.594" r="1.44"/>
         </svg>
       </a>
       <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/arifuzzamanshaon" target="_blank">
         <svg viewBox="0 0 24 24">
-          <path d="M22.23 0H1.77C.792 0 0 .774 0 1.728v20.544C0 23.226.792 24 1.77 24h20.46C23.208 24 24 23.226 24 22.272V1.728C24 .774 23.208 0 22.23 0zM7.12 20.452H3.554V9h3.566v11.452zM5.337 7.616a2.064 2.064 0 110-4.128 2.064 2.064 0 010 4.128zM20.452 20.452h-3.556v-5.594c0-1.333-.025-3.047-1.856-3.047-1.857 0-2.14 1.45-2.14 2.949v5.692h-3.555V9h3.415v1.561h.049c.476-.902 1.637-1.852 3.367-1.852 3.6 0 4.265 2.37 4.265 5.452v6.291z"/>
+          <path fill="#0077B5" d="M22.23 0H1.77C.792 0 0 .774 0 1.728v20.544C0 23.226.792 24 1.77 24h20.46C23.208 24 24 23.226 24 22.272V1.728C24 .774 23.208 0 22.23 0zM7.12 20.452H3.554V9h3.566v11.452zM5.337 7.616a2.064 2.064 0 110-4.128 2.064 2.064 0 010 4.128zM20.452 20.452h-3.556v-5.594c0-1.333-.025-3.047-1.856-3.047-1.857 0-2.14 1.45-2.14 2.949v5.692h-3.555V9h3.415v1.561h.049c.476-.902 1.637-1.852 3.367-1.852 3.6 0 4.265 2.37 4.265 5.452v6.291z"/>
         </svg>
       </a>
       <!-- Email -->
       <a href="mailto:hr.arifuzzamanshaon@gmail.com">
         <svg viewBox="0 0 24 24">
-          <path d="M12 13.065L.001 4.5V20.25C0 21.215.785 22 1.75 22h20.5c.965 0 1.75-.785 1.75-1.75V4.5L12 13.065zm0-2.158l11.25-7.017v-.89c0-.965-.785-1.75-1.75-1.75H2.5c-.965 0-1.75.785-1.75 1.75v.89L12 10.907z"/>
+          <path fill="#EA4335" d="M12 13.065L.001 4.5V20.25C0 21.215.785 22 1.75 22h20.5c.965 0 1.75-.785 1.75-1.75V4.5L12 13.065zm0-2.158l11.25-7.017v-.89c0-.965-.785-1.75-1.75-1.75H2.5c-.965 0-1.75.785-1.75 1.75v.89L12 10.907z"/>
         </svg>
       </a>
     </div>
